--- a/Website/index.html
+++ b/Website/index.html
@@ -7,7 +7,7 @@
     <title>DeRoll</title>
 </head>
 <body>
-    <div>
+    <div class="d-flex justify-content-end">
         <button>Connect Wallet</button>
     </div>
     
