--- a/Website/index.html
+++ b/Website/index.html
@@ -11,6 +11,9 @@
     <div class="d-flex justify-content-end">
         <button>Connect Wallet</button>
     </div>
+    <div>
+        
+    </div>
     
     </body>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
