--- a/Website/index.html
+++ b/Website/index.html
@@ -12,7 +12,7 @@
         <button>Connect Wallet</button>
     </div>
     <div>
-        <p>Hello</p>Hello
+        <p style="padding">Hello</p>Hello
     </div>
     
     </body>
