--- a/Website/index.html
+++ b/Website/index.html
@@ -7,7 +7,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <title>DeRoll</title>
 </head>
-<body>
+<body style="background-color: ;">
     <div class="d-flex justify-content-end">
         <button>Connect Wallet</button>
     </div>
