--- a/Website/index.html
+++ b/Website/index.html
@@ -9,10 +9,10 @@
 </head>
 <body style="background-color: grey;">
     <div class="d-flex justify-content-end">
-        <button style="padding-top: 5px; padding-right: 5px;">Connect Wallet</button>
+        <button style="margin-top: 5px; margin-right: 5px;">Connect Wallet</button>
     </div>
     <div>
-        <p style="padding-left: 10px;">Hello</p>
+        <p style="margin-left: 10px;">Hello</p>
     </div>
     
     </body>
