--- a/Website/index.html
+++ b/Website/index.html
@@ -10,6 +10,8 @@
 <body style="background-color: grey;">
     <div class="d-flex justify-content-end">
         <button style="margin-top: 5px; margin-right: 5px;">Connect Wallet</button>
+        <button style="margin-top: 5px; margin-right: 5px;"></button>
+        <button style="margin-top: 5px; margin-right: 5px;">Connect Wallet</button>
     </div>
     <div>
         <p style="margin-left: 10px;">Hello</p>
