--- a/Website/index.html
+++ b/Website/index.html
@@ -8,7 +8,7 @@
     <title>DeRoll</title>
 </head>
 <body style="background-color: grey;">
-    <div class="d-flex justify-content-end">
+    <div id="Header" class="d-flex justify-content-end">
         <button style="margin-top: 10px; margin-right: 5px;">Proprietors</button>
         <button style="margin-top: 10px; margin-right: 60px;">Employees</button>
         <button style="margin-top: 10px; margin-right: 5px;">Connect Wallet</button>
