--- a/Website/index.html
+++ b/Website/index.html
@@ -13,7 +13,7 @@
         <button style="margin-top: 10px; margin-right: 60px;">Employees</button>
         <button style="margin-top: 10px; margin-right: 5px;">Connect Wallet</button>
     </div>
-    <div>
+    <div id="">
         
     </div>
     
