--- a/Website/index.html
+++ b/Website/index.html
@@ -14,7 +14,9 @@
         <button style="margin-top: 10px; margin-right: 5px;">Connect Wallet</button>
     </div>
     <div id="Proprietor">
-        <
+        <div>
+            
+        </div>
     </div>
 
     <div id="Employees">
