--- a/Website/index.html
+++ b/Website/index.html
@@ -15,7 +15,7 @@
     </div>
 
     <div id="Proprietor">
-        <div class="border ">
+        <div class="border margin-top-10">
         </div>
     </div>
 
