--- a/Website/index.html
+++ b/Website/index.html
@@ -15,7 +15,7 @@
     </div>
 
     <div id="Proprietor">
-        <div class="border margin-top-100">
+        <div class="border mt-10">
         </div>
     </div>
 
