--- a/Website/index.html
+++ b/Website/index.html
@@ -15,7 +15,7 @@
     </div>
 
     <div id="Proprietor">
-        <div class="border mt-4 w-40">
+        <div class="border mt-4 w-30 p-3">
         </div>
     </div>
 
