--- a/Website/index.html
+++ b/Website/index.html
@@ -15,7 +15,7 @@
     </div>
 
     <div id="Proprietor">
-        <div class="border mt-4 mw-30">
+        <div class="border mt-4 p-4">
         </div>
     </div>
 
