--- a/Website/index.html
+++ b/Website/index.html
@@ -15,7 +15,7 @@
     </div>
 
     <div id="Proprietor">
-        <div class="border w- mt-4 p-4">
+        <div class="border w-35 mt-4 p-4">
         </div>
     </div>
 
