--- a/Website/index.html
+++ b/Website/index.html
@@ -17,6 +17,8 @@
     <div id="Proprietor">
         <div class="border w-50 mt-4 p-4">
         </div>
+        <div class="border w-50 mt-4 p-4">
+        </div>
     </div>
 
     <div id="Employees">
