--- a/Website/index.html
+++ b/Website/index.html
@@ -17,7 +17,7 @@
     <div id="Proprietor">
         <div class="border w-50 mt-4 p-4">
         </div>
-        <div class="border w-50 mt-4 p-4">
+        <div class="border justify-content-end w-50 mt-4 p-4 ">
         </div>
     </div>
 
