--- a/Website/index.html
+++ b/Website/index.html
@@ -15,10 +15,11 @@
     </div>
 
     <div id="Proprietor">
-        <div class="border w-50 mt-4 p-4">
-        </div>
-        <div class="border justify-content-end w-50 mt-4 p-4 ">
-        </div>
+        <div class="form-group">
+            <label for="exampleInputEmail1">Email address</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+          </div>
     </div>
 
     <div id="Employees">
