--- a/Website/index.html
+++ b/Website/index.html
@@ -17,7 +17,7 @@
     <div id="Proprietor">
         <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
-            <input style="" type="email" class="form-control w-25" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+            <input style="margin-left: 25px" type="email" class="form-control w-25" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
           </div>
     </div>
