--- a/Website/index.html
+++ b/Website/index.html
@@ -15,9 +15,9 @@
     </div>
 
     <div id="Proprietor">
-        <div style="" class="form-group">
+        <div style="margin-left: ;" class="form-group">
             <label for="exampleInputEmail1">Email address</label>
-            <input style="margin-left: " type="email" class="form-control w-25" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+            <input type="email" class="form-control w-25" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
           </div>
     </div>
