--- a/Website/index.html
+++ b/Website/index.html
@@ -15,7 +15,7 @@
     </div>
 
     <div id="Proprietor">
-        <h1
+        <h1>Create a new Work Contract</h1>
         <div style="margin-left: 25px; margin-top: 8%;" class="form-group">
             <label for="exampleInputEmail1">Email address</label>
             <input type="email" class="form-control w-25" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
