--- a/Website/index.html
+++ b/Website/index.html
@@ -16,7 +16,7 @@
 
     <div id="Proprietor">
         <h2 style="padding-top: 4%; padding-left: 6%">Create a new Work Contract</h1>
-        <div style="margin-left: 25px; margin-top: 8%;" class="form-group">
+        <div style="margin-left: 6%; margin-top: 8%;" class="form-group">
             <label for="exampleInputEmail1">Email address</label>
             <input type="email" class="form-control w-25" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
           </div>
