--- a/Website/index.html
+++ b/Website/index.html
@@ -17,7 +17,7 @@
     <div id="Proprietor">
         <h2 style="padding-top: 4%; padding-left: 6%">Create a new Work Contract</h1>
         <div style="margin-left: 6%; margin-top: 3%;" class="form-group">
-            <label for="exampleInputEmail1">Your Alias</label>
+            <label for="pAlias">Your Alias</label>
             <input class="form-control w-25" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
           </div>
     </div>
