--- a/Website/index.html
+++ b/Website/index.html
@@ -17,8 +17,8 @@
     <div id="Proprietor">
         <h2 style="padding-top: 4%; padding-left: 6%">Create a new Work Contract</h1>
         <div style="margin-left: 6%; margin-top: 3%;" class="form-group">
-            <label class="font-weight-bold" for="pAlias">Your Alias</label>
-            <input class="form-control w-25" id="pAlias" aria-describedby="emailHelp" placeholder="Enter email">
+            <label for="pAlias">Your Alias</label>
+            <input class="form-control w-25" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
           </div>
     </div>
 
