--- a/Website/index.html
+++ b/Website/index.html
@@ -18,7 +18,7 @@
         <h2 style="padding-top: 4%; padding-left: 6%">Create a new Work Contract</h1>
         <div style="margin-left: 6%; margin-top: 3%;" class="form-group">
             <label for="pAlias">Your Alias</label>
-            <input style="" class="form-control w-25" id="pAlias" aria-describedby="emailHelp" placeholder="Enter email">
+            <input style="padding-top: 1%;" class="form-control w-25" id="pAlias" aria-describedby="emailHelp" placeholder="Enter email">
           </div>
     </div>
 
