--- a/Website/index.html
+++ b/Website/index.html
@@ -17,7 +17,7 @@
     <div id="Proprietor">
         <h2 style="padding-top: 4%; padding-left: 6%">Create a new Work Contract</h1>
         <div style="margin-left: 6%; margin-top: 3%;" class="form-group">
-            <a for="pAlias">Your Alias</a>
+            <a style="font" for="pAlias">Your Alias</a>
             <input style="margin-top: 1%;" class="form-control w-25" id="pAlias" aria-describedby="emailHelp" placeholder="Proprietor Alias">
           </div>
     </div>
