--- a/Website/index.html
+++ b/Website/index.html
@@ -15,6 +15,7 @@
     </div>
 
     <div id="Proprietor">
+        <div></div>
         <h2 style="padding-top: 4%; padding-left: 6%">Create a new Work Contract</h1>
         <div style="margin-left: 6%; margin-top: 3%;" class="form-group">
             <a style="font-size: larger; font-weight: bold;" for="pAlias">Your Alias</a>
