--- a/Website/index.html
+++ b/Website/index.html
@@ -21,6 +21,10 @@
                 <a style="font-size: larger; font-weight: bold;" for="pAlias">Your Alias</a>
                 <input style="margin-top: 0.75%;" class="form-control w-25" id="pAlias" aria-describedby="emailHelp" placeholder="Proprietor Alias">
             </div>
+                <div style="margin-left: 6%; margin-top: 3%;" class="form-group">
+                    <a style="font-size: larger; font-weight: bold;" for="pAlias">Your Alias</a>
+                    <input style="margin-top: 0.75%;" class="form-control w-25" id="pAlias" aria-describedby="emailHelp" placeholder="Proprietor Alias">
+                </div>
         </div>
     </div>
 
