--- a/Website/index.html
+++ b/Website/index.html
@@ -22,7 +22,7 @@
                 <input style="margin-top: 0.75%;" class="form-control w-25" id="pAlias" aria-describedby="emailHelp" placeholder="Proprietor Alias">
             </div>
                 <div style="margin-left: 6%; margin-top: 2%;" class="form-group">
-                    <a style="font-size: larger; font-weight: bold;" for="pAlias">Your Alias</a>
+                    <a style="font-size: larger; font-weight: bold;" for="pAlias">Employee Alias</a>
                     <input style="margin-top: 0.75%;" class="form-control w-25" id="pAlias" aria-describedby="emailHelp" placeholder="Proprietor Alias">
                 </div>
         </div>
