--- a/Website/index.html
+++ b/Website/index.html
@@ -23,7 +23,7 @@
             </div>
                 <div style="margin-left: 6%; margin-top: 2%;" class="form-group">
                     <a style="font-size: larger; font-weight: bold;" for="pAlias">Employee Alias</a>
-                    <input style="margin-top: 0.75%;" class="form-control w-25" id="pAlias" aria-describedby="emailHelp" placeholder="Proprietor Alias">
+                    <input style="margin-top: 0.75%;" class="form-control w-25" id="pAlias" aria-describedby="emailHelp" placeholder="Employee Alias">
                 </div>
         </div>
     </div>
