--- a/Website/index.html
+++ b/Website/index.html
@@ -22,11 +22,11 @@
                 <input style="margin-top: 0.75%;" class="form-control w-25" id="pAlias" aria-describedby="emailHelp" placeholder="Proprietor Alias">
             </div>
                 <div style="margin-left: 6%; margin-top: 2%;" class="form-group">
-                    <a style="font-size: larger; font-weight: bold;" for="pAlias">Employee Alias</a>
-                    <input style="margin-top: 0.75%;" class="form-control w-25" id="pAlias" aria-describedby="emailHelp" placeholder="Employee Alias">
+                    <a style="font-size: larger; font-weight: bold;" for=epAlias">Employee Alias</a>
+                    <input style="margin-top: 0.75%;" class="form-control w-25" id="eAlias" aria-describedby="emailHelp" placeholder="Employee Alias">
                 </div>
                 <div style="margin-left: 6%; margin-top: 2%;" class="form-group">
-                    <a style="font-size: larger; font-weight: bold;" for="pAlias">Employee Address</a>
+                    <a style="font-size: larger; font-weight: bold;" for="AddyInput">Employee Address</a>
                     <input style="margin-top: 0.75%;" class="form-control w-25" id="pAlias" aria-describedby="emailHelp" placeholder="Employee Address">
                 </div>
         </div>
