--- a/Website/index.html
+++ b/Website/index.html
@@ -27,7 +27,7 @@
                 </div>
                 <div style="margin-left: 6%; margin-top: 2%;" class="form-group">
                     <a style="font-size: larger; font-weight: bold;" for="AddyInput">Employee Address</a>
-                    <input style="margin-top: 0.75%;" class="form-control w-25" id="pAlias" aria-describedby="emailHelp" placeholder="Employee Address">
+                    <input style="margin-top: 0.75%;" class="form-control w-25" id="AddyInput" aria-describedby="emailHelp" placeholder="Employee Address">
                 </div>
         </div>
     </div>
