--- a/Website/index.html
+++ b/Website/index.html
@@ -7,7 +7,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <title>DeRoll</title>
 </head>
-<body style="background-color: darkgrey;">
+<body style="background-color: #4353FF;">
     <div id="Header" class="d-flex justify-content-end">
         <button style="margin-top: 10px; margin-right: 5px;">Proprietors</button>
         <button style="margin-top: 10px; margin-right: 60px;">Employees</button>
