--- a/Website/index.html
+++ b/Website/index.html
@@ -14,7 +14,7 @@
         <button style="margin-top: 10px; margin-right: 5px;">Connect Wallet</button>
     </div>
 
-    <div id="Proprietor">
+    <div class="container" id="Proprietor">
         <div id="CreateNew">
             <h2 style="padding-top: 4%; padding-left: 6%">Create a new Work Contract</h1>
             <div style="margin-left: 6%; margin-top: 3%;" class="form-group">
