--- a/Website/index.html
+++ b/Website/index.html
@@ -30,6 +30,7 @@
                     <a style="font-size: larger; font-weight: bold;" for="AddyInput">Employee Address</a>
                     <input style="margin-top: 0.75%;" class="form-control w-25" id="AddyInput" aria-describedby="emailHelp" placeholder="Employee Address">
                 </div>
+            </div>
         </div>
     </div>
 
