--- a/Website/index.html
+++ b/Website/index.html
@@ -44,4 +44,5 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/functionallity.js"></script>
+    <script src="js/web3.js"></script>
 </html> 
