--- a/Website/index.html
+++ b/Website/index.html
@@ -9,7 +9,7 @@
 </head>
 <body style="background-color: #4353FF;">
     <div id="Header" class="d-flex justify-content-end">
-        <button style="margin-top: 10px; margin-right: 5px;">Proprietors</button>
+        <button onclickstyle="margin-top: 10px; margin-right: 5px;">Proprietors</button>
         <button style="margin-top: 10px; margin-right: 60px;">Employees</button>
         <button style="margin-top: 10px; margin-right: 5px;">Connect Wallet</button>
     </div>
