--- a/Website/index.html
+++ b/Website/index.html
@@ -10,7 +10,7 @@
 <body style="background-color: #4353FF;">
     <div id="Header" class="d-flex justify-content-end">
         <button onclick="DisplayProprietorPage()" style="margin-top: 10px; margin-right: 5px;">Proprietors</button>
-        <button style="margin-top: 10px; margin-right: 60px;">Employees</button>
+        <button onclick="DisplayEmployeePage()" style="margin-top: 10px; margin-right: 60px;">Employees</button>
         <button style="margin-top: 10px; margin-right: 5px;">Connect Wallet</button>
     </div>
 
