--- a/Website/index.html
+++ b/Website/index.html
@@ -43,6 +43,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/abi.js"></script>
     <script src="js/functionallity.js"></script>
     <script src="js/web3.js"></script>
 </html> 
