--- a/Website/index.html
+++ b/Website/index.html
@@ -11,7 +11,7 @@
     <div id="Header" class="d-flex justify-content-end">
         <button onclick="DisplayProprietorPage()" style="margin-top: 10px; margin-right: 5px;">Proprietors</button>
         <button onclick="DisplayEmployeePage()" style="margin-top: 10px; margin-right: 60px;">Employees</button>
-        <button style="margin-top: 10px; margin-right: 5px;">Connect Wallet</button>
+        <button onclick="" style="margin-top: 10px; margin-right: 5px;">Connect Wallet</button>
     </div>
 
     <div class="container" id="Proprietor">
