--- a/Website/index.html
+++ b/Website/index.html
@@ -7,9 +7,9 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <title>DeRoll</title>
 </head>
-<body style="background-color: pink;">
+<body style="background-color: rgb(228, 118, 243);">
     <div id="Header" class="d-flex justify-content-end">
-        <button onclick="DisplayProprietorPage()" style="margin-top: 10px; margin-right: 5px;">Proprietors</button>
+        <button onclick="DisplayProprietorPage()" className="proprietor-header">Proprietors</button>
         <button onclick="DisplayEmployeePage()" style="margin-top: 10px; margin-right: 60px;">Employees</button>
         <button style="margin-top: 10px; margin-right: 5px;">Connect Wallet</button>
     </div>
@@ -22,7 +22,7 @@
                     <input style="margin-top: 0.75%;" class="form-control w-25" id="pAlias" aria-describedby="emailHelp" placeholder="Proprietor Alias">
                     </div>
                     <div style="margin-left: 6%; margin-top: 2%;" class="form-group">
-                        <a style="font-size: larger; font-weight: bold;" for=epAlias">Employee Alias</a>
+                        <a style="font-size: larger; font-weight: bold;" for="epAlias">Employee Alias</a>
                         <input style="margin-top: 0.75%;" class="form-control w-25" id="eAlias" aria-describedby="emailHelp" placeholder="Employee Alias">
                     </div>
                     <div style="margin-left: 6%; margin-top: 2%;" class="form-group">
@@ -34,7 +34,7 @@
        
     </div>
 
-    <div id="Employee">
+    <!-- <div class="container" id="Employee">
         <div class="col-md" id="CreateNew">
             <h2 style="padding-top: 4%; padding-left: 6%">Create a new Work Contract</h1>
                 <div style="margin-left: 6%; margin-top: 3%;" class="form-group">
@@ -42,7 +42,7 @@
                     <input style="margin-top: 0.75%;" class="form-control w-25" id="pAlias" aria-describedby="emailHelp" placeholder="Proprietor Alias">
                     </div>
                     <div style="margin-left: 6%; margin-top: 2%;" class="form-group">
-                        <a style="font-size: larger; font-weight: bold;" for=epAlias">Employee Alias</a>
+                        <a style="font-size: larger; font-weight: bold;" for="epAlias">Employee Alias</a>
                         <input style="margin-top: 0.75%;" class="form-control w-25" id="eAlias" aria-describedby="emailHelp" placeholder="Employee Alias">
                     </div>
                     <div style="margin-left: 6%; margin-top: 2%;" class="form-group">
@@ -51,7 +51,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     
     </body>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
