--- a/Website/index.html
+++ b/Website/index.html
@@ -15,6 +15,7 @@
 <body style="background-color: rgb(228, 118, 243);">
     <button onclick="DisplayProprietorPage()">
         <div className="proprietor-header">
+            <p>Proprietor</p>
         </div>
     </button>
     <button onclick="DisplayEmployeePage()" style="margin-top: 10px; margin-right: 60px;">Employees</button>
