--- a/Website/index.html
+++ b/Website/index.html
@@ -19,7 +19,7 @@
         </div>
     </button>
     <button onclick="DisplayEmployeePage()" style="margin-top: 10px; margin-right: 60px;">Employees</button>
-    <button onclick="loginWithEth()" style="margin-top: 10px; margin-right: 5px;">Connect Wallet</button>
+    <button onclick="loginWithEth()" id="walletbuton" style="margin-top: 10px; margin-right: 5px;">Connect Wallet</button>
 
     <div class="container" id="Proprietor">
         <div class="col-md" id="CreateNew">
