--- a/Website/index.html
+++ b/Website/index.html
@@ -15,13 +15,12 @@
 </head>
 
 <body style="background-color: rgb(228, 118, 243);">
-    <button onclick="DisplayProprietorPage()">
-        <div className="proprietor-header">
-            <p>Proprietor</p>
-        </div>
+    <button onclick="DisplayProprietorPage()" className="proprietor-header">
+        <p>Proprietor</p>
     </button>
     <button onclick="DisplayEmployeePage()" style="margin-top: 10px; margin-right: 60px;">Employees</button>
-    <button onclick="loginWithEth()" id="walletbuton" style="margin-top: 10px; margin-right: 5px;">Connect Wallet</button>
+    <button onclick="loginWithEth()" id="walletbuton" style="margin-top: 10px; margin-right: 5px;">Connect
+        Wallet</button>
 
     <div class="container" id="Proprietor">
         <div class="col-md" id="CreateNew">
