--- a/Website/index.html
+++ b/Website/index.html
@@ -9,7 +9,7 @@
         integrity="sha512-5erpERW8MxcHDF7Xea9eBQPiRtxbse70pFcaHJuOhdEBQeAxGQjUwgJbuBDWve+xP/u5IoJbKjyJk50qCnMD7A=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
         </script>
-    <link rel="stylesheet" href="css/styles.css">
+    <link type="text/css" rel="stylesheet" href="css/styles.css">
     <title>DeRoll</title>
 </head>
 
