--- a/Website/index.html
+++ b/Website/index.html
@@ -15,7 +15,7 @@
     <title>DeRoll</title>
 </head>
 
-<body style="background-color: rgb(228, 118, 243);">
+<body>
     <button onclick="DisplayProprietorPage()" className="proprietor-header">
         <p>Proprietor</p>
     </button>
