--- a/Website/index.html
+++ b/Website/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <button onclick="DisplayProprietorPage()" className="proprietor-header">
-        <p>Proprietor</p>
+    Proprietor
     </button>
     <button onclick="DisplayEmployeePage()" style="margin-top: 10px; margin-right: 60px;">Employees</button>
     <button onclick="loginWithEth()" id="walletbuton" style="margin-top: 10px; margin-right: 5px;">Connect
