--- a/Website/index.html
+++ b/Website/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <button onclick="DisplayProprietorPage()" className="proprietor-header">
+    <button style="mar" onclick="DisplayProprietorPage()" className="proprietor-header">
     Proprietor
     </button>
     <button onclick="DisplayEmployeePage()" style="margin-top: 10px; margin-right: 60px;">Employees</button>
