--- a/Website/index.html
+++ b/Website/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <button onclick="DisplayProprietorPage()" className="proprietor-header">Proprietor</button>
+    <button style=margin" onclick="DisplayProprietorPage()" className="proprietor-header">Proprietor</button>
     <button onclick="DisplayEmployeePage()" style="margin-top: 10px; margin-right: 60px;">Employees</button>
     <button onclick="loginWithEth()" id="walletbuton" style="margin-top: 10px; margin-right: 5px;">Connect Wallet</button>
 
