--- a/Website/index.html
+++ b/Website/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <button style="margin-left: 73%;" onclick="DisplayProprietorPage()" class="proprietor-header">Proprietor</button>
+    <button style="margin-left: 73%; margin-right: 5px;" onclick="DisplayProprietorPage()" class="proprietor-header">Proprietor</button>
     <button onclick="DisplayEmployeePage()" style="margin-top: 10px; margin-right: 60px;" class="proprietor-header">Employees</button>
     <button onclick="loginWithEth()" id="walletbuton" style="margin-top: 10px; margin-right: 5px;" class="proprietor-header">Connect Wallet</button>
 
