--- a/Website/index.html
+++ b/Website/index.html
@@ -17,8 +17,8 @@
 </head>
 
 <body>
-    <button style="margin-left: 72%; margin-right: 10px;" onclick="DisplayProprietorPage()" class="proprietor-header">Proprietor</button>
-    <button onclick="DisplayEmployeePage()" style="margin-top: 10px; margin-right: 60px;" class="proprietor-header">Employees</button>
+    <button style="margin-left: 72%;" onclick="DisplayProprietorPage()" class="proprietor-header">Proprietor</button>
+    <button onclick="DisplayEmployeePage()" style="margin-top: 10px; margin-right: 60px; margin-left: 10px;" class="proprietor-header">Employees</button>
     <button onclick="loginWithEth()" id="walletbuton" style="margin-top: 10px; margin-right: 5px;" class="proprietor-header">Connect Wallet</button>
 
     <div class="container" id="Proprietor">
