--- a/Website/index.html
+++ b/Website/index.html
@@ -44,7 +44,7 @@
 
     </div>
 
-    <!-- <div class="container" id="Employee">
+    <div class="container" id="Employee">
         <div class="col-md" id="CreateNew">
             <h2 style="padding-top: 4%; padding-left: 6%">Create a new Work Contract</h1>
                 <div style="margin-left: 6%; margin-top: 3%;" class="form-group">
@@ -61,7 +61,7 @@
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
 
 </body>
 <script src="js/abi.js"></script>
