--- a/Website/index.html
+++ b/Website/index.html
@@ -45,7 +45,7 @@
     </div>
 
     <div class="container" id="Employee">
-        <div class="col-md" id="CreateNew">
+        <div id="CreateNew">
             <h2 style="padding-top: 4%; padding-left: 6%">Create a new Work Contract</h1>
                 <div style="margin-left: 6%; margin-top: 3%;" class="form-group">
                     <a style="font-size: larger; font-weight: bold;" for="pAlias">Your Alias</a>
