--- a/Website/index.html
+++ b/Website/index.html
@@ -44,7 +44,7 @@
 
     </div>
 
-    <div class="container" id="Employee">
+    <div class="container" id="Employee" style="display: none;">
         <div id="CreateNew">
             <h2 style="padding-top: 4%; padding-left: 6%">Create a new Work Contract</h1>
                 <div style="margin-left: 6%; margin-top: 3%;" class="form-group">
