--- a/Website/index.html
+++ b/Website/index.html
@@ -40,6 +40,24 @@
                         aria-describedby="emailHelp" placeholder="Employee Address">
                 </div>
         </div>
+        <div class="col-md" id="View Existing">
+            <h2 style="padding-top: 4%; padding-left: 6%">Create a new Work Contract</h1>
+                <div style="margin-left: 6%; margin-top: 3%;" class="form-group">
+                    <a style="font-size: larger; font-weight: bold;" for="pAlias">Your Alias:</a>
+                    <input style="margin-top: 0.75%;" class="form-control w-25" id="pAlias" aria-describedby="emailHelp"
+                        placeholder="Proprietor Alias">
+                </div>
+                <div style="margin-left: 6%; margin-top: 2%;" class="form-group">
+                    <a style="font-size: larger; font-weight: bold;" for="epAlias">Employee Alias:</a>
+                    <input style="margin-top: 0.75%;" class="form-control w-25" id="eAlias" aria-describedby="emailHelp"
+                        placeholder="Employee Alias">
+                </div>
+                <div style="margin-left: 6%; margin-top: 2%;" class="form-group">
+                    <a style="font-size: larger; font-weight: bold;" for="AddyInput">Employee Address:</a>
+                    <input style="margin-top: 0.75%;" class="form-control w-25" id="AddyInput"
+                        aria-describedby="emailHelp" placeholder="Employee Address">
+                </div>
+        </div>
     </div>
 
     </div>
