--- a/Website/index.html
+++ b/Website/index.html
@@ -22,7 +22,7 @@
     <button onclick="loginWithEth()" id="walletbuton" style="margin-top: 10px; margin-right: 5px;" class="proprietor-header">Connect Wallet</button>
 
     <div class="container" id="Proprietor">
-        <div style="margin-left: 12;" class="col-md" id="CreateNew">
+        <div style="margin-left: 12%;" class="col-md" id="CreateNew">
             <h2 style="padding-top: 4%; padding-left: 6%">Create a new Work Contract</h1>
                 <div style="margin-left: 6%; margin-top: 3%;" class="form-group">
                     <a style="font-size: larger; font-weight: bold;" for="pAlias">Your Alias:</a>
