--- a/Website/index.html
+++ b/Website/index.html
@@ -23,7 +23,7 @@
 
     <div class="container" id="Proprietor">
         <div style="margin-left: 12%;" class="col-md" id="CreateNew">
-            <h2 style="padding-top: 4%; padding-left: 6%">Create a new Work Contract</h1>
+            <h2 style="padding-left: 6%">Create a new Work Contract</h1>
                 <div style="margin-left: 6%; margin-top: 3%;" class="form-group">
                     <a style="font-size: larger; font-weight: bold;" for="pAlias">Your Alias:</a>
                     <input style="margin-top: 0.75%;" class="form-control w-25" id="pAlias" aria-describedby="emailHelp"
@@ -41,7 +41,7 @@
                 </div>
         </div>
         <div style="margin-left: 22vw;" class="col-md" id="View Existing">
-            <h2 style="padding-top: 4%; padding-left: 6%">Create a new Work Contract</h1>
+            <h2 style="padding-left: 6%">Create a new Work Contract</h1>
                 <div style="margin-left: 6%; margin-top: 3%;" class="form-group">
                     <a style="font-size: larger; font-weight: bold;" for="pAlias">Your Alias:</a>
                     <input style="margin-top: 0.75%;" class="form-control w-25" id="pAlias" aria-describedby="emailHelp"
