--- a/Website/index.html
+++ b/Website/index.html
@@ -42,6 +42,12 @@
                     <input style="margin-top: 0.75%;" class="form-control w-25" id="AddyInput"
                         aria-describedby="emailHelp" placeholder="Employee Address">
                 </div>
+                <div style="margin-left: 6%; margin-top: 2%;" class="form-group">
+                    <a style="font-size: larger; font-weight: bold;" for="AddyInput">Employee Address:</a>
+                    <br>
+                    <input style="margin-top: 0.75%;" class="form-control w-25" id="AddyInput"
+                        aria-describedby="emailHelp" placeholder="Employee Address">
+                </div>
         </div>
         <div style="margin-left: 8vw;" class="col-md" id="View Existing">
             <h2>Create a new Work Contract</h1>
