--- a/Website/index.html
+++ b/Website/index.html
@@ -50,7 +50,7 @@
                 </div>
         </div>
         <div style="margin-left: 8vw;" class="col-md" id="View Existing">
-            <h2>View</h1>
+            <h2>View existing </h1>
                 
         </div>
     </div>
