--- a/Website/index.html
+++ b/Website/index.html
@@ -24,13 +24,13 @@
     <div class="container" id="Proprietor">
         <div style="margin-left: 17%;" class="col-md" id="CreateNew">
             <h2>Create a new Work Contract</h1>
-                <div style="margin-left: 6%; margin-top: 3%;" class="form-group">
+                <div style="margin-top: 3%;" class="form-group">
                     <a style="font-size: larger; font-weight: bold;" for="pAlias">Your Alias:</a>
                     <br>
                     <input style="margin-top: 0.75%;" class="form-control w-25" id="pAlias" aria-describedby="emailHelp"
                         placeholder="Proprietor Alias">
                 </div>
-                <div style="; margin-top: 2%;" class="form-group">
+                <div style="margin-top: 2%;" class="form-group">
                     <a style="font-size: larger; font-weight: bold;" for="epAlias">Employee Alias:</a>
                     <br>
                     <input style="margin-top: 0.75%;" class="form-control w-25" id="eAlias" aria-describedby="emailHelp"
