--- a/Website/index.html
+++ b/Website/index.html
@@ -36,7 +36,7 @@
                     <input style="margin-top: 0.75%;" class="form-control w-25" id="eAlias" aria-describedby="emailHelp"
                         placeholder="Employee Alias">
                 </div>
-                <div style="margin-left: 6%; margin-top: 2%;" class="form-group">
+                <div style="margin-top: 2%;" class="form-group">
                     <a style="font-size: larger; font-weight: bold;" for="AddyInput">Employee Address:</a>
                     <br>
                     <input style="margin-top: 0.75%;" class="form-control w-25" id="AddyInput"
