--- a/Website/index.html
+++ b/Website/index.html
@@ -18,8 +18,12 @@
 
 <body>
     <button style="margin-left: 64%;" onclick="DisplayProprietorPage()" class="proprietor-header">Proprietor</button>
-    <button onclick="DisplayEmployeePage()" style="margin-top: 10px; margin-right: 60px; margin-left: 10px;" class="proprietor-header">Employees</button>
-    <button onclick="loginWithEth()" id="walletbuton" style="margin-top: 10px; margin-right: 5px;" class="proprietor-header">Connect Wallet</button>
+    <button style="margin-left: 64%;" onclick="DisplayEmployeePage()" class="create-new-contract-btn">Create New
+        Contract</button>
+    <button onclick="DisplayEmployeePage()" style="margin-top: 10px; margin-right: 60px; margin-left: 10px;"
+        class="proprietor-header">Employees</button>
+    <button onclick="loginWithEth()" id="walletbuton" style="margin-top: 10px; margin-right: 5px;"
+        class="proprietor-header">Connect Wallet</button>
 
     <div class="container" id="Proprietor">
         <div style="margin-left: 17%;" class="col-md" id="CreateNew">
@@ -51,7 +55,7 @@
         </div>
         <div style="margin-left: 8vw;" class="col-md" id="View Existing">
             <h2>View existing Work Contracts</h1>
-                
+
         </div>
     </div>
 
@@ -62,18 +66,21 @@
             <h2 style="padding-top: 4%; padding-left: 6%">Create a new Work Contract</h1>
                 <div style="margin-left: 6%; margin-top: 3%;" class="form-group">
                     <a style="font-size: larger; font-weight: bold;" for="pAlias">Your Alias</a>
-                    <input style="margin-top: 0.75%;" class="form-control w-25" id="pAlias" aria-describedby="emailHelp" placeholder="Proprietor Alias">
-                    </div>
-                    <div style="margin-left: 6%; margin-top: 2%;" class="form-group">
-                        <a style="font-size: larger; font-weight: bold;" for="epAlias">Employee Alias</a>
-                        <input style="margin-top: 0.75%;" class="form-control w-25" id="eAlias" aria-describedby="emailHelp" placeholder="Employee Alias">
-                    </div>
-                    <div style="margin-left: 6%; margin-top: 2%;" class="form-group">
-                        <a style="font-size: larger; font-weight: bold;" for="AddyInput">Employee Address</a>
-                        <input style="margin-top: 0.75%;" class="form-control w-25" id="AddyInput" aria-describedby="emailHelp" placeholder="Employee Address">
+                    <input style="margin-top: 0.75%;" class="form-control w-25" id="pAlias" aria-describedby="emailHelp"
+                        placeholder="Proprietor Alias">
                 </div>
-            </div>
+                <div style="margin-left: 6%; margin-top: 2%;" class="form-group">
+                    <a style="font-size: larger; font-weight: bold;" for="epAlias">Employee Alias</a>
+                    <input style="margin-top: 0.75%;" class="form-control w-25" id="eAlias" aria-describedby="emailHelp"
+                        placeholder="Employee Alias">
+                </div>
+                <div style="margin-left: 6%; margin-top: 2%;" class="form-group">
+                    <a style="font-size: larger; font-weight: bold;" for="AddyInput">Employee Address</a>
+                    <input style="margin-top: 0.75%;" class="form-control w-25" id="AddyInput"
+                        aria-describedby="emailHelp" placeholder="Employee Address">
+                </div>
         </div>
+    </div>
     </div>
 
 </body>
