--- a/Website/index.html
+++ b/Website/index.html
@@ -49,7 +49,7 @@
                         150 Char.):</a>
                     <br>
                     <input style="margin-top: 0.75%;" class="form-control w-25" id="AddyInput"
-                        aria-describedby="emailHelp" placeholder="Employee Address">
+                        aria-describedby="emailHelp" placeholder="Work Desc.">
                 </div>
         </div>
         <div style="margin-left: 8vw;" class="col-md" id="View Existing">
