--- a/Website/index.html
+++ b/Website/index.html
@@ -62,22 +62,38 @@
 
     <div class="container" id="Employee" style="display: none;">
         <div id="CreateNew">
-            <h2 style="padding-top: 4%; padding-left: 6%">Create a new Work Contract</h1>
-                <div style="margin-left: 6%; margin-top: 3%;" class="form-group">
-                    <a style="font-size: larger; font-weight: bold;" for="pAlias">Your Alias</a>
-                    <input style="margin-top: 0.75%;" class="form-control w-25" id="pAlias" aria-describedby="emailHelp"
-                        placeholder="Proprietor Alias">
-                </div>
-                <div style="margin-left: 6%; margin-top: 2%;" class="form-group">
-                    <a style="font-size: larger; font-weight: bold;" for="epAlias">Employee Alias</a>
-                    <input style="margin-top: 0.75%;" class="form-control w-25" id="eAlias" aria-describedby="emailHelp"
-                        placeholder="Employee Alias">
-                </div>
-                <div style="margin-left: 6%; margin-top: 2%;" class="form-group">
-                    <a style="font-size: larger; font-weight: bold;" for="AddyInput">Employee Address</a>
-                    <input style="margin-top: 0.75%;" class="form-control w-25" id="AddyInput"
-                        aria-describedby="emailHelp" placeholder="Employee Address">
-                </div>
+            <div style="margin-left: 17%;" class="col-md" id="CreateNew">
+                <h2>Create a new Work Contract</h1>
+                    <div style="margin-top: 3%;" class="form-group">
+                        <a class="label" style="font-size: larger; font-weight: bold;" for="pAlias">Your Alias:</a>
+                        <br>
+                        <input style="margin-top: 0.75%;" class="form-control w-25" id="pAlias" aria-describedby="emailHelp"
+                            placeholder="Proprietor Alias">
+                    </div>
+                    <div style="margin-top: 2%;" class="form-group">
+                        <a class="label" style="font-size: larger; font-weight: bold;" for="epAlias">Employee Alias:</a>
+                        <br>
+                        <input style="margin-top: 0.75%;" class="form-control w-25" id="eAlias" aria-describedby="emailHelp"
+                            placeholder="Employee Alias">
+                    </div>
+                    <div style="margin-top: 2%;" class="form-group">
+                        <a class="label" style="font-size: larger; font-weight: bold;" for="AddyInput">Employee Address:</a>
+                        <br>
+                        <input style="margin-top: 0.75%;" class="form-control w-25" id="AddyInput"
+                            aria-describedby="emailHelp" placeholder="Employee Address">
+                    </div>
+                    <div style="margin-top: 2%;" class="form-group">
+                        <a class="label" style="font-size: larger; font-weight: bold;" for="AddyInput">Work Description (Max
+                            150 Char.):</a>
+                        <br>
+                        <input style="margin-top: 0.75%;" class="form-control w-25" id="AddyInput"
+                            aria-describedby="emailHelp" placeholder="Work Desc.">
+                    </div>
+            </div>
+            <div style="margin-left: 8vw;" class="col-md" id="View Existing">
+                <h2>View existing Work Contracts</h1>
+    
+            </div>
         </div>
     </div>
     </div>
