--- a/Website/index.html
+++ b/Website/index.html
@@ -63,7 +63,7 @@
 
     <div class="container" id="Employee">
         <div style="margin-left: 8vw;" class="col-md" id="View Existing">
-            <h2>View existing Work Contracts</h1>
+            <h2>View your </h1>
 
         </div>
     </div>
