--- a/Website/index.html
+++ b/Website/index.html
@@ -66,6 +66,10 @@
             <h2>View your awaiting contracts</h1>
 
         </div>
+        <div style="margin-left: 8vw;" class="col-md" id="View Existing">
+            <h2>View your awaiting contracts</h1>
+
+        </div>
     </div>
     </div>
 
