--- a/Website/index.html
+++ b/Website/index.html
@@ -62,7 +62,7 @@
     </div>
 
     <div class="container" id="Employee">
-        <div style="margin-left: 8vw;" class="col-md" id="View Existing">
+        <div style="margin-left: 17%;" class="col-md" id="View Existing">
             <h2>View your awaiting contracts</h1>
 
         </div>
