--- a/Website/index.html
+++ b/Website/index.html
@@ -52,6 +52,14 @@
                     <input style="margin-top: 0.75%;" class="form-control w-25" id="AddyInput"
                         aria-describedby="emailHelp" placeholder="Employee Address">
                 </div>
+                <div style="margin-top: 2%;" class="form-group">
+                    <a class="label" style="font-size: larger; font-weight: bold;" for="AddyInput" maxlength=150>Work
+                        Description (Max
+                        150 Char.):</a>
+                    <br>
+                    <input style="margin-top: 0.75%;" class="form-control w-25" id="AddyInput"
+                        aria-describedby="emailHelp" placeholder="Employee Address">
+                </div>
         </div>
         <div style="margin-left: 8vw;" class="col-md" id="View Existing">
             <h2>View existing Work Contracts</h1>
