--- a/Website/index.html
+++ b/Website/index.html
@@ -45,7 +45,7 @@
                         aria-describedby="emailHelp" placeholder="Employee Address">
                 </div>
                 <div style="margin-top: 2%;" class="form-group">
-                    <a class="label" style="font-size: larger; font-weight: bold;" for="AddyInput" maxlength=150>Work
+                    <a class="label" style="font-size: larger; font-weight: bold;" for="DescInput" maxlength=150>Work
                         Description (Max
                         150 Char.):</a>
                     <br>
