--- a/Website/index.html
+++ b/Website/index.html
@@ -49,7 +49,7 @@
                         Description (Max
                         150 Char.):</a>
                     <br>
-                    <input style="margin-top: 0.75%;" class="form-control w-25" id="AddyInput"
+                    <input style="margin-top: 0.75%;" class="form-control w-25" id="DescInput"
                         aria-describedby="emailHelp" placeholder="Employee Address">
                 </div>
                 <div style="margin-top: 2%;" class="form-group">
