--- a/Website/index.html
+++ b/Website/index.html
@@ -53,10 +53,10 @@
                         aria-describedby="emailHelp" placeholder="Employee Address">
                 </div>
                 <div style="margin-top: 2%;" class="form-group">
-                    <a class="label" style="font-size: larger; font-weight: bold;" for="AddyInput" maxlength=150>Work
+                    <a class="label" style="font-size: larger; font-weight: bold;" for="EtherInput" maxlength=150>Work
                         Total Ether to be paid:</a>
                     <br>
-                    <input style="margin-top: 0.75%;" class="form-control w-25" id="AddyInput"
+                    <input style="margin-top: 0.75%;" class="form-control w-25" id="EtherInput"
                         aria-describedby="emailHelp" placeholder="Employee Address">
                 </div>
         </div>
