--- a/Website/index.html
+++ b/Website/index.html
@@ -57,7 +57,7 @@
                         Total Ether to be paid:</a>
                     <br>
                     <input style="margin-top: 0.75%;" class="form-control w-25" id="EtherInput"
-                        aria-describedby="emailHelp" placeholder="Employee Address">
+                        aria-describedby="emailHelp" placeholder="Ether">
                 </div>
         </div>
         <div style="margin-left: 8vw;" class="col-md" id="View Existing">
