--- a/Website/index.html
+++ b/Website/index.html
@@ -50,7 +50,7 @@
                         150 Char.):</a>
                     <br>
                     <input style="margin-top: 0.75%;" class="form-control w-25" id="DescInput"
-                        aria-describedby="emailHelp" placeholder="Employee Address">
+                        aria-describedby="emailHelp" placeholder="Desc.">
                 </div>
                 <div style="margin-top: 2%;" class="form-group">
                     <a class="label" style="font-size: larger; font-weight: bold;" for="EtherInput" maxlength=150>Work
