--- a/Website/index.html
+++ b/Website/index.html
@@ -59,7 +59,7 @@
                     <input style="margin-top: 0.75%;" class="form-control w-25" id="EtherInput"
                         aria-describedby="emailHelp" placeholder="Ether">
                 </div>
-                <button onclick="" id="proprietor-header confirm" style="margin-top: 25px; margin-right: 5px;" class="proprietor-header">Connect Wallet</button>
+                <button onclick="" id="=confirm1" style="margin-top: 25px; margin-right: 5px;" class="proprietor-header confirm">Connect Wallet</button>
         </div>
         <div style="margin-left: 8vw;" class="col-md" id="View Existing">
             <h2>View existing Work Contracts</h1>
