--- a/Website/index.html
+++ b/Website/index.html
@@ -39,9 +39,9 @@
                         placeholder="Employee Alias">
                 </div>
                 <div style="margin-top: 2%;" class="form-group">
-                    <a class="label" style="font-size: larger; font-weight: bold;" maxlength=42  minlength=42 for="AddyInput">Employee Address:</a>
+                    <a class="label" style="font-size: larger; font-weight: bold;" for="AddyInput">Employee Address:</a>
                     <br>
-                    <input style="margin-top: 0.75%;" class="form-control w-25" id="AddyInput"
+                    <input style="margin-top: 0.75%;" class="form-control w-25" maxlength=42  minlength=42 id="AddyInput"
                         aria-describedby="emailHelp" placeholder="Employee Address">
                 </div>
                 <div style="margin-top: 2%;" class="form-group">
