--- a/Website/index.html
+++ b/Website/index.html
@@ -41,7 +41,7 @@
                 <div style="margin-top: 2%;" class="form-group">
                     <a class="label" style="font-size: larger; font-weight: bold;" for="AddyInput">Employee Address:</a>
                     <br>
-                    <input style="margin-top: 0.75%;" type="text" class="form-control w-25" maxlength='42' minlength='42' id="AddyInput"
+                    <input style="margin-top: 0.75%;" type="text" class="form-control w-25" maxlength="" minlength='42' id="AddyInput"
                          placeholder="Employee Address">
                 </div>
                 <div style="margin-top: 2%;" class="form-group">
