--- a/Website/index.html
+++ b/Website/index.html
@@ -23,7 +23,7 @@
     <button onclick="loginWithEth()" id="walletbuton" style="margin-top: 10px; margin-right: 5px;"
         class="proprietor-header">Connect Wallet</button>
 
-    <div class="container" id="Proprietor" style="display: none;">
+    <div class="container" id="Proprietor">
         <div style="margin-left: 17%;" class="col-md" id="CreateNew">
             <h2>Create a new Work Contract</h1>
                 <div style="margin-top: 3%;" class="form-group">
@@ -69,7 +69,7 @@
 
     </div>
 
-    <div class="container" id="Employee">
+    <div class="container" id="Employee" style="display: none;">
         <div style="margin-left: 17%;" class="col-md" id="View Existing">
             <h2>View your awaiting contracts</h1>
 
