--- a/Website/index.html
+++ b/Website/index.html
@@ -56,7 +56,7 @@
                     <a class="label" style="font-size: larger; font-weight: bold;" for="EtherInput">Work
                         Total Ether to be paid:</a>
                     <br>
-                    <input style="margin-top: 0.75%;" class="form-control w-25" id="EtherInput"
+                    <input style="margin-top: 0.75%;" type="number" class="form-control w-25" id="EtherInput"
                         aria-describedby="emailHelp" placeholder="Ether">
                 </div>
                 <button onclick="" id="=confirm1" style="margin-top: 25px; margin-right: 5px;" class="proprietor-header confirm">Create Contract</button>
