--- a/Website/index.html
+++ b/Website/index.html
@@ -33,7 +33,7 @@
                         placeholder="Proprietor Alias">
                 </div>
                 <div style="margin-top: 2%;" class="form-group">
-                    <a class="label" style="font-size: larger; font-weight: bold;" for="epAlias">Employee Alias:</a>
+                    <a class="label" style="font-size: larger; font-weight: bold;" for="eAlias">Employee Alias:</a>
                     <br>
                     <input style="margin-top: 0.75%;" class="form-control w-25" id="eAlias" aria-describedby="emailHelp"
                         placeholder="Employee Alias">
