--- a/Website/index.html
+++ b/Website/index.html
@@ -63,7 +63,9 @@
         </div>
         <div style="margin-left: 8vw;" class="col-md" id="View Existing">
             <h2>View existing Work Contracts</h1>
-                <div
+                <div>
+                    
+                </div>
         </div>
     </div>
 
